# osc-tts

./: .gitignore  README.md  pyproject.toml  requirements.txt
osc_tts/: __init__.py  utils.py
osc_tts/audio/: __init__.py  base_model.py  batch_processor.py  utils.py
osc_tts/audio/detokenizer/: spark_detokenizer.py
osc_tts/audio/tokenizer/: spark_tokenizer.py
osc_tts/models/: __init__.py  base.py  sparktts.py
osc_tts/modules/blocks/: samper.py  vocos.py
osc_tts/modules/encoder_decoder/: feat_decoder.py  feat_encoder.py  wave_generator.py
osc_tts/modules/fsq/: finite_scalar_quantization.py  residual_fsq.py
osc_tts/modules/speaker/: ecapa_tdnn.py  perceiver_encoder.py  speaker_encoder.py
osc_tts/modules/vq/: __init__.py
